// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with no title or description 1`] = `
<div>
  <page>
    <view
      style="margin-top: 2pt; font-size: 9pt; color: rgba(0, 0, 0, 0.54);"
    >
      <text>
        description
      </text>
    </view>
  </page>
</div>
`;

exports[`renders with relevant formStyles 1`] = `
<div>
  <page>
    <view
      style="margin-top: 2pt; font-size: 9pt; color: rgba(0, 0, 0, 0.54); border: 1pt solid red;"
    >
      <text>
        description
      </text>
    </view>
  </page>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <page>
    <view
      style="margin-top: 2pt; font-size: 9pt; color: rgba(0, 0, 0, 0.54);"
    >
      <text>
        description
      </text>
    </view>
  </page>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <page>
    <view
      style="margin-top: 2pt; font-size: 9pt; color: rgba(0, 0, 0, 0.54);"
    >
      <text>
        description
      </text>
    </view>
  </page>
</div>
`;
